--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>hello</h1>
-    <form action="/upload" method="post", enctype="multipart/form-data">
+    <form action="/user/upload" method="post", enctype="multipart/form-data">
         <input type="file" name="profileImage">
         <button type="submit">Submit</button>
     </form>
